# nxaccess-hls-framework

./: .gitignore  LICENSE  README.md  firmware_license.json  user_firmware_config.yaml
hw/: Makefile  README.md  build.tcl  build_fpga.py  build_fpga_settings.json  close_solution.tcl  configure.tcl  cosim.tcl  csim.tcl  csynth.tcl  export.tcl  open_solution.tcl  vivado.jou
hw/project_nxaccess_hls/: version.txt
hw/project_nxaccess_hls/include/enyx/hfp/: hfp.hpp
hw/project_nxaccess_hls/include/enyx/hfp/hls/: hfp.hpp
hw/project_nxaccess_hls/include/enyx/hls/: arbiter.hpp  byte.hpp  demuxer.hpp  helpers.hpp  string.hpp  word_traits.hpp
hw/project_nxaccess_hls/include/enyx/md/hw/: books.hpp  nxbus.hpp  string.hpp
hw/project_nxaccess_hls/include/enyx/oe/hwstrat/: helpers.hpp  msg_headers.hpp  nxoe.hpp  string.hpp  tcp.hpp
hw/project_nxaccess_hls/sim/: top_tb.cpp  top_tb_bin.cpp
hw/project_nxaccess_hls/sim/top_tb_0/: dma_user_in_0.ref.txt  dma_user_in_1.ref.txt  nxbus_in_0.ref.txt  nxbus_in_1.ref.txt  tcp_reply_payload_in_0.ref.txt  tcp_reply_payload_in_1.ref.txt  trigger_out_0.gen.txt  trigger_out_0.ref.txt  trigger_out_1.gen.txt  trigger_out_1.ref.txt
hw/project_nxaccess_hls/sim/top_tb_tcp_bin/: dma_user_in_0.ref.txt  dma_user_out_0.ref.txt  nxbus_in_0.ref.txt  tcp_reply_data.ref.txt  tcp_reply_session.ref.txt  trigger_out_0.ref.txt
hw/project_nxaccess_hls/src/: configuration.cpp  configuration.hpp  messages.hpp  notifications.cpp  notifications.hpp  tcp_consumer.cpp  tcp_consumer.hpp  tick2cancel.cpp  tick2cancel.hpp  tick2trade.cpp  tick2trade.hpp  top.cpp  top.hpp
python-testsuite/: .gitattributes  Makefile  NEWS  README.md  extract_version_from_news_file.sh  make_pkg2.sh  run_pylint.sh  runtest.sh  runtest_noargs.sh
python-testsuite/common/: __init__.py  audit_trail_helper.py  buffer_helper.py  ip_from_environment.py  read_helper.py  tcp_ip_stack_helper.py  tcp_session_helper.py  test_helper.py  upload_helper.py  wait.py
python-testsuite/standalone_trigger/: helper_test_case.py  test_standalone_trigger_collection_id.py  test_standalone_trigger_disabled_collection.py  test_standalone_trigger_missing_instructions.py  test_standalone_trigger_variable_arg_count.py  test_standalone_trigger_variable_arg_size.py
scripts/: generate_msgs  pcap_to_txt  txt_to_tb
scripts/rebuild_firmware/: build_firmware  install  load_configuration  rebuild_firmware  setup.py
scripts/rebuild_firmware/src/flows/: firmware.py
scripts/rebuild_firmware/src/helpers/: firmware_framework.py  hls_project_repository.py
scripts/rebuild_firmware/tests/: test_arguments.py  test_firmware_framework.py  test_hls_project_repository.py
sw/enyx-oe-hwstrat-hls-engine/: CHANGELOG.md  CMakeLists.txt  COPYING  changelog.sh
sw/enyx-oe-hwstrat-hls-engine/cmake/: GNUInstallDirs.cmake  GetVersionFromChangeLogFile.cmake
sw/enyx-oe-hwstrat-hls-engine/demo/: CMakeLists.txt  HwStratHlsDemo.cpp
sw/enyx-oe-hwstrat-hls-engine/lib/: CMakeLists.txt
sw/enyx-oe-hwstrat-hls-engine/lib/data/: CMakeLists.txt  enyx-oe-hwstrat-hls-engine.pc.in
sw/enyx-oe-hwstrat-hls-engine/lib/include/: CMakeLists.txt
sw/enyx-oe-hwstrat-hls-engine/lib/include/enyx/oe/hwstrat/demo/: AlgorithmDispatcher.hpp  AlgorithmDriver.hpp  ErrorCode.hpp  Handler.hpp  Helper.hpp  Protocol.hpp  StandAloneTrigger.hpp
sw/enyx-oe-hwstrat-hls-engine/lib/src/: AlgorithmDispatcher.cpp  AlgorithmDriver.cpp  CMakeLists.txt  ErrorCode.cpp  Protocol.cpp  StandAloneTrigger.cpp
sw/enyx-oe-hwstrat-hls-engine/python-binding/: CMakeLists.txt  module.cpp
sw/enyx-oe-hwstrat-hls-engine/tools/: CMakeLists.txt  hwstrat_conf_injector.cpp  hwstrat_conf_reader.cpp  injector_helper.hpp  nxbus_injector.cpp  trigger_reader.cpp
